test/functions/deitz/default/test_default4-error.good
test_default4-error.chpl:25: error: ambiguous call 'foo()'
test_default4-error.chpl:1: note: candidates are: foo(i: int, j: real, k: string)
test_default4-error.chpl:5: note:                 foo(i: real, j: string, k: int)
test_default4-error.chpl:9: note:                 foo(i: string, j: int, k: real)
